Bug 391495 - Configure menu entry does not open any window
Summary: Configure menu entry does not open any window
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.0.81
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-07 02:08 UTC by Guillaume Racicot
Modified: 2018-03-19 21:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume Racicot 2018-03-07 02:08:16 UTC
Step to reproduce:

 1. Press the hamburger menu
 2. Click on "Configure Elisa"
 3. ...

Actual behavior:

 - No configuration window is open

Expected behavior:

 - A configuration window is opened
Comment 1 Matthieu Gallien 2018-03-11 09:28:40 UTC
Thanks for your report.
I can confirm that the flatpak build of Elisa from KDE is affected by this bug. I am investigating.
Comment 2 Matthieu Gallien 2018-03-19 21:02:03 UTC
Git commit 5ffcd5c23782cad8403995c3d2c8ce6506411602 by Matthieu Gallien.
Committed on 19/03/2018 at 19:51.
Pushed by mgallien into branch '0.1'.

fix configuration dialog not showing properly

Summary:
fix configuration dialog not showing properly

Test Plan: configuration dialog opens correctly (depends on install path being discovered properly)

Reviewers: #elisa

Differential Revision: https://phabricator.kde.org/D11500

M  +1    -1    src/elisaapplication.cpp

https://commits.kde.org/elisa/5ffcd5c23782cad8403995c3d2c8ce6506411602