fix configuration dialog not showing properly

Summary:
fix configuration dialog not showing properly

BUG: 391495

Test Plan: configuration dialog opens correctly (depends on install path being discovered properly)

Reviewers: #elisa

Differential Revision: https://phabricator.kde.org/D11500